# simplefem

./: README.md  pyproject.toml
.github/workflows/: run-tests.yml
simplefem/: __init__.py  lagrange.py  polynomials.py
test/: test_lagrange.py  test_orthogonal.py
