[project]
name = "simplefem"
version = "1.0.0"
description = "a simple example finite element library"
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Scroggs", email = "defelement@mscroggs.co.uk" }
]
dependencies = ["numpy"]

[project.urls]
homepage = "https://github.com/DefElement/simplefem"
repository = "https://github.com/DefElement/simplefem"

[project.optional-dependencies]
style = ["ruff", "mypy"]
test = ["pytest", "quadraturerules"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
